# Pacman2

./: README.md  app_class.py  enemy.py  enemy_class.py  main.py  player_class.py  pyproject.toml  requirements.txt  settings.py
pacman/: settings.py
pacman/assets/: map_chao.csv  map_paredes.csv
pacman/classes/: map.py  tile.py
pacman/utils/: __init__.py  csv_utils.py
